fix alignment of single clietn edit page

--- a/app/assets/stylesheets/advisors.sass
+++ b/app/assets/stylesheets/advisors.sass
@@ -175,7 +175,7 @@ a[data-icon='envelope']
       &:hover
         cursor: default
     &:first-child.current
-      margin-left: -0.75em
+      // margin-left: -0.75em
     &:last-child.current
 
 .profile-tab
@@ -253,3 +253,7 @@ body.contact_notes .table
 #actions
   .field
     margin-bottom: 0
+
+#fix_alignment
+  margin-left: 0
+  margin-bottom: 15px
